--- a/css/styles.css
+++ b/css/styles.css
@@ -26,13 +26,13 @@ body{
 }
 
 .jumbotron {
-    background-image: url("../img/banner3.png");
-    background-size: cover;
+    background-image: url("../img/banner.png");
+    background-color: rgba(25, 135, 84, 0.4);
+    background-position: center;
+    background-repeat: no-repeat;
     min-height: 250px;
-    margin: 0px auto;
     padding: 70px 30px;
     color: floralwhite; }
-
 
 address{
     font-size:80%;
@@ -53,21 +53,47 @@ address{
 
 .carousel-item {
   height: 300px;
-  transition: 0.4s;
+  transition: 0.3s;
 }
 
 .carousel-item img {
     position: absolute;
     top: 0;
     left: 0;
-    min-height: 300px;
-    max-width: 300px;
+   
+   
 }
 
 .carousel-caption {
-    transform: translate(70px,-70px);
+    transform: translate(50px,-50px);
     bottom: 0;
     top: 50%; 
+}
+
+#carouselAgro .carousel-caption h5 {
+    background-color: rgba(25, 135, 84, 0.7);
+    margin: 0 auto;
+    
+}
+
+#carouselAgro .carousel-caption{
+    transform: translateY(-50%);
+    bottom: initial;
+    top: 10%;
+    
+}
+
+#carouselRenova .carousel-caption h5 {
+    background-color: rgba(25, 135, 84, 0.7);
+    margin: 0 auto;
+    
+}
+
+#carouselRenova .carousel-caption{
+    transform: translateY(-50%);
+    bottom: initial;
+    top: 10%;
+    
 }
 
 .card {
@@ -94,6 +120,6 @@ address{
 }
 
 .modal-title {
-    background-color:#8FBC8F;
+    background-color:rgba(25, 135, 84, 0.3);
 }
 
